fix styles on mobile displays - 1.0

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ footer {
     height: 100%;
   }
   h1 {
-    font-size: 2rem;
+    font-size: 2.2rem;
     margin-bottom: 0.5rem;
     margin-top: 0.8rem;
   }
@@ -156,11 +156,14 @@ footer {
   .num-of-tries {
     width: 110px;
     height: auto;
-    margin-left: 1rem;
+    margin-left: 0.8rem;
+  }
+  .tries-count {
+    font-size: 1.3rem;
   }
   .reset {
     margin-left: 90px;
     margin-right: 2px;
-    margin-right: 1rem;
+    margin-right: 0.8rem;
   }
 }
